force-app/main/default/objects/Kenyt_Template__mdt/Kenyt_Template__mdt.object-meta.xml
<CustomObject>
    <label>Kenyt Template</label>
    <description>Per-scenario Kenyt.AI message template configuration (one record per Salesforce event trigger).</description>
    <pluralLabel>Kenyt Templates</pluralLabel>
</CustomObject>