force-app/main/default/objects/Kenyt_Template__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <inlineHelpText>Only active templates are sent. Lets you turn a scenario on/off without code.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>