force-app/main/default/objects/Kenyt_Template__mdt/fields/Argument_Fields__c.field-meta.xml
<CustomField>
    <fullName>Argument_Fields__c</fullName>
    <inlineHelpText>Ordered, comma-separated field API names on the source record used to fill the template variables (Arguments). e.g. Name,Allocated_Project__c</inlineHelpText>
    <label>Argument Fields</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>