force-app/main/default/objects/Kenyt_Template__mdt/fields/Attachment_Links__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Links__c</fullName>
    <inlineHelpText>Optional comma-separated media/document URLs (AttachmentLinks).</inlineHelpText>
    <label>Attachment Links</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>