force-app/main/default/objects/Kenyt_Template__mdt/fields/Bot_Id__c.field-meta.xml
<CustomField>
    <fullName>Bot_Id__c</fullName>
    <inlineHelpText>Kenyt BotId for this template. Leave blank to use the Default Bot Id from Kenyt Setting.</inlineHelpText>
    <label>Bot Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>