force-app/main/default/objects/Kenyt_Template__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>WhatsApp/SMS use Phone; Email uses Email.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
                <default>true</default>
                <label>WhatsApp</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>