force-app/main/default/objects/Kenyt_Template__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <inlineHelpText>Unique trigger key the Apex service looks up, e.g. LEAD_WELCOME, SV_CREATED, QUOTE_SENT, BOOKING_CONFIRMED, SV_REMINDER_1, SV_REMINDER_2, SV_POST.</inlineHelpText>
    <label>Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>