force-app/main/default/objects/Kenyt_Template__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <inlineHelpText>The Kenyt template name (TemplateName) to send for this event.</inlineHelpText>
    <label>Template Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>